@@ -509,8 +509,13 @@
 #define WTF_USE_PTHREAD_BASED_QT 1
 #endif
 
+#if !defined(ENABLE_JSC_MULTIPLE_THREADS)
 #define ENABLE_JSC_MULTIPLE_THREADS 1
+#endif
+
+#if !defined(ENABLE_WTF_MULTIPLE_THREADS)
 #define ENABLE_WTF_MULTIPLE_THREADS 1
+#endif
 
 /* On Windows, use QueryPerformanceCounter by default */
 #if OS(WINDOWS)
