@@ -1,5 +1,12 @@
 2011-09-09  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: Guard against double-#define for something already #defined
+        by the build system.
+
+        * wtf/Platform.h:
+
+2011-09-09  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Dan Bernstein.
 
         Never #define ENABLE_SINGLE_THREADED, !ENABLE_JSC_MULTIPLE_THREADS, or
